# Model-deployment

[MNN]Yolo3-MobileNetV2/: CMakeLists.txt  README.md  yolo.cpp
[MNN]Yolo3-MobileNetV2/lib/: libopencv_photo.so.3.4.10
tensorflow c++/rubbish_cls/: CMakeLists.txt  README.md  modelPredict.cpp  modelPredict.h  test.cpp
tensorflow c++/rubbish_cls/include/opencv2/: cvconfig.h
tensorflow c++/rubbish_cls/include/tensorflow/cc/ops/: array_ops.cc  linalg_ops.cc  list_ops.cc  lookup_ops.cc  lookup_ops_internal.cc  nn_ops_internal.cc  string_ops.cc  string_ops_internal.cc  training_ops.cc
tensorflow c++/rubbish_cls/lib/: libopencv_highgui.so.3.4.10  libopencv_imgcodecs.so.3.4  libopencv_ml.so.3.4  libopencv_objdetect.so.3.4  libopencv_shape.so.3.4.10  libopencv_stitching.so.3.4.10  libopencv_videoio.so.3.4  libopencv_videostab.so.3.4
tensorflow c++/rubbish_cls/lib/bazel-bin/tensorflow/: libtensorflow_cc.so-2.params  libtensorflow_cc.so.runfiles_manifest  libtensorflow_framework.so-2.params
tensorflow c++/rubbish_cls/lib/bazel-bin/tensorflow/c/: libc_api.pic.a-2.params  libcheckpoint_reader.pic.a-2.params  libtf_status_helper.pic.a-2.params
tensorflow c++/rubbish_cls/lib/bazel-bin/tensorflow/cc/: libarray_grad.pic.lo  libarray_grad.pic.lo-2.params  libarray_ops.pic.lo  libarray_ops.pic.lo-2.params  libarray_ops_internal.pic.lo  libarray_ops_internal.pic.lo-2.params  libcc_ops.pic.lo  libcc_ops.pic.lo-2.params  libcc_ops_internal.pic.lo  libcc_ops_internal.pic.lo-2.params  libclient_session.pic.a-2.params  libconst_op.pic.a-2.params  libdata_flow_grad.pic.lo  libdata_flow_grad.pic.lo-2.params  libgrad_op_registry.pic.a-2.params  libgradients.pic.a-2.params  libimage_grad.pic.lo  libimage_grad.pic.lo-2.params  libmath_grad.pic.lo  libmath_grad.pic.lo-2.params  libmath_ops.pic.lo  libmath_ops.pic.lo-2.params  libmath_ops_internal.pic.lo  libmath_ops_internal.pic.lo-2.params  libnn_grad.pic.lo  libnn_grad.pic.lo-2.params  libops.pic.a-2.params  libscope.pic.a-2.params  libwhile_loop.pic.a-2.params
tensorflow c++/rubbish_cls/lib/bazel-bin/tensorflow/core/: libabi.pic.a-2.params  libarray_grad.pic.lo  libarray_grad.pic.lo-2.params  libarray_ops_op_lib.pic.lo  libarray_ops_op_lib.pic.lo-2.params  libaudio_ops_op_lib.pic.lo  libaudio_ops_op_lib.pic.lo-2.params  libbatch_ops_op_lib.pic.lo  libbatch_ops_op_lib.pic.lo-2.params  (+144 more)
(+2498 files in other folders)
